# cinaroom

./: .gitignore  BRAND.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE2_SUMMARY.md  PROJECT_DELIVERY.md  README.md
backend/: .env.example  BUILD_INSTRUCTIONS.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  go.mod  go.sum  nginx.conf  start.sh
backend/api/: API.md
backend/migrations/: 001_init.sql
backend/scripts/: deploy.sh  migrate.sh  migrate.sql
backend/tests/: api_test.go  benchmark_test.go  concurrent_test.go  functional_test.go  oauth_test.go  pentest_test.go  security_test.go
cinaclaw/: BUILD.linux.md  BUILD.macOS.md  BUILD.windows.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  renovate.json5
cinaclaw/.github/: pull_request_template.md
cinaclaw/data/: CMakeLists.txt  cinaclaw.gui.desktop
cinaclaw/docs/: .custom_wordlist.txt  conf.py  contribute-to-cinaclaw-docs.md  index.md
cinaclaw/packaging/: cleanup.cmake  cpack.cmake
cinaclaw/snap/: snapcraft.yaml
cinaclaw/src/: CMakeLists.txt  version.h.in
cinaclaw/src/client/cli/: CMakeLists.txt  argparser.cpp  client.cpp  client.h  main.cpp
cinaclaw/src/client/cli/cmd/: alias.cpp  alias.h  aliases.cpp  aliases.h  animated_spinner.cpp  animated_spinner.h  authenticate.cpp  authenticate.h  clone.cpp  clone.h  common_callbacks.h  common_cli.cpp  common_cli.h  create_alias.cpp  create_alias.h  delete.cpp  delete.h  exec.cpp  exec.h  find.cpp  find.h  get.cpp  get.h  help.cpp  help.h  info.cpp  info.h  launch.cpp  launch.h  list.cpp  list.h  mount.cpp  mount.h  networks.cpp  networks.h  prefer.cpp  prefer.h  purge.cpp  purge.h  recover.cpp  (+29 more)
cinaclaw/src/client/cli/formatter/: csv_formatter.cpp  format_utils.cpp  json_formatter.cpp  table_formatter.cpp  yaml_formatter.cpp
cinaseek/: BUILD.linux.md  BUILD.macOS.md  BUILD.windows.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  renovate.json5
cinaseek/.github/: pull_request_template.md
cinaseek/data/: CMakeLists.txt  cinaseek.gui.desktop
cinaseek/docs/: .custom_wordlist.txt  conf.py  contribute-to-cinaseek-docs.md  index.md
cinaseek/packaging/: cleanup.cmake  cpack.cmake
cinaseek/src/client/cli/: CMakeLists.txt  argparser.cpp  client.cpp  client.h  main.cpp
cinaseek/src/client/cli/cmd/: alias.cpp  alias.h  aliases.cpp  aliases.h  animated_spinner.cpp  animated_spinner.h  authenticate.cpp  authenticate.h  clone.cpp  clone.h  common_callbacks.h  common_cli.cpp  common_cli.h  create_alias.cpp  create_alias.h  delete.cpp  delete.h  exec.cpp  exec.h  find.cpp  find.h  get.cpp  get.h  help.cpp  help.h  info.cpp  info.h  launch.cpp  launch.h  list.cpp  list.h  mount.cpp  mount.h  networks.cpp  networks.h  prefer.cpp  prefer.h  purge.cpp  purge.h  recover.cpp  (+29 more)
cinaseek/src/client/cli/formatter/: csv_formatter.cpp  format_utils.cpp  json_formatter.cpp  table_formatter.cpp  yaml_formatter.cpp
deploy/: cinaseek-backend.service
deploy/k8s/: ingress.yaml  (+7 more)
docs/: ARCHITECTURE.md  CINASEEK_INTEGRATION.md  CINATOKEN_INTEGRATION.md  EXECUTION_PLAN.md  PHASE2_COMPLETION.md  PHASE2_TEST_GUIDE.md
frontend/: .env.development  .env.production  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  产品原型设计.md  路由配置说明.md  页面组件清单.md  项目完成总结.md
scripts/: deploy-k8s.sh  install-openclaw.sh  mount-workspace.sh
websocket/: Makefile  README.md  quickstart.sh
(+1643 files in other folders)
